--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="col s5 pull-s7"><span class="flow-text">
                     <div class="input-field col s12">
-
+                        <h4 id="food">Food</h4>
                         <textarea id="textarea1" class="materialize-textarea"></textarea>
                         <label for="textarea1"></label><a class="waves-effect waves-light btn"
                             id="food-button">Search</a>
@@ -61,6 +61,7 @@
             </div>
             <div class="col s5 pull-s7"><span class="flow-text">
                     <div class="input-field col s12">
+                            <h4 id="drink">Drinks</h4>
                         <textarea id="textarea-drink" class="materialize-textarea"></textarea>
                         <label for="textarea2"></label><a class="waves-effect waves-light btn"
                             id="drink-button">Search</a>
